Fixing incorrect day of week in mhtml header.

Bug: 826799
Change-Id: Ibf6b452aee7256cbb45d7d214729529c09acb5ab
Reviewed-on: https://chromium-review.googlesource.com/1012186
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Jian Li <jianli@chromium.org>
Commit-Queue: Jonathan Freed <freedjm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552919}
Former-commit-id: 277fea617cf362f5afa5ef655999b01f236c3f25